--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,6 +15,7 @@
 
   <div id="container">
     <strong>ADIOS</strong>
+    <p>ESTE CAMBIO HIZO JP</p>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 </ion-content>
