--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      HEADER BY CHINITO
+      HEADER BY CHINITO -LE MEJORE BY CHINITO
     </ion-title>
   </ion-toolbar>
 </ion-header>
