--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,22 @@
+
+
+<ion-header>
+    <ion-toolbar>
+        <ion-title>Login</ion-title>
+    </ion-toolbar>
+</ion-header>
+
 <ion-content>
 
-hola en login
+    <ion-item>
+        <ion-label>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, error! Veritatis voluptatum provident, quis deserunt tempore voluptatem et facere, ad dolorum reiciendis excepturi sed doloremque voluptate explicabo minima nesciunt atque!</p>
+        </ion-label>
+    </ion-item>
 
-<app-menu></app-menu>
+    <ion-button (click)="openMenu()" expand="full"color="dark" shape="round">
+        Carrito
+    </ion-button>
+
 
 </ion-content>
