--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,43 @@
 <ion-app>
 
-  <ion-router-outlet></ion-router-outlet>
+
+  <ion-split-pane contentId="main" when="false">
+    <!--  the side menu  -->
+    <ion-menu contentId="main" maxEdgeStart="200"
+    menuId="principal" side="start">
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Menú</ion-title>
+        </ion-toolbar>
+      </ion-header>
+
+      <ion-content>
+          <app-menu></app-menu>
+      </ion-content>
+
+
+    </ion-menu>
+
+    <ion-menu side="end" contentId="main" maxEdgeStart="200"
+    menuId="carrito" type="push">
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Menú carrito</ion-title>
+        </ion-toolbar>
+      </ion-header>
+
+      <ion-content>
+          <app-menu></app-menu>
+      </ion-content>
+
+
+    </ion-menu>
+  
+    <!-- the main content -->
+    <ion-router-outlet id="main"></ion-router-outlet>
+
+    
+  </ion-split-pane>
+
 
 </ion-app>
