--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,3 +1,19 @@
-<p>
-  menu works!
-</p>
+
+
+<ion-list>
+
+  <ion-menu-toggle>
+
+    <ion-item [routerLink]="['/']" >
+      <ion-label>Home</ion-label>
+    </ion-item>
+
+  </ion-menu-toggle>
+
+  <ion-menu-toggle>
+      <ion-item [routerLink]="['/login']" >
+        <ion-label>Login</ion-label>
+      </ion-item>
+  </ion-menu-toggle>
+
+</ion-list>
