--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,89 @@
+
+
+
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Home</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
 
-  home works
+  <ion-button (click)="selecNivel1()">
+   Nivel 1
+  </ion-button>
 
-  <app-header></app-header>
+  <ion-button (click)="selecNivel2()">
+    Nivel 2
+   </ion-button>
 
-  <app-menu></app-menu>
+    <ion-button (click)="addNuevoEnable()" expand="full">
+      <ion-label>Crear nuevo</ion-label>
+      <ion-icon slot="end" name="person-add-sharp"></ion-icon>
+    </ion-button>
 
-  <app-header></app-header>
+    <div *ngIf="addNuevo == true">
+      <ion-item>
+        <ion-label>Nombre</ion-label>
+        <ion-input [(ngModel)]="newEmpleado.nombre"></ion-input>
+      </ion-item>
+  
+      <ion-item>
+        <ion-label>Telefono</ion-label>
+        <ion-input [(ngModel)]="newEmpleado.telefono"></ion-input>
+      </ion-item>
+  
+      <ion-item>
+        <ion-label>Cargo</ion-label>
+        <ion-input [(ngModel)]="newEmpleado.cargo"></ion-input>
+      </ion-item>
+  
+      
+      <ion-item>
+        <ion-label>Nivel</ion-label>
+        <ion-input type="number" [(ngModel)]="newEmpleado.nivel"></ion-input>
+      </ion-item>
 
-  <app-menu></app-menu>
+      <ion-button (click)="cancelar()">
+        Cancelar
+      </ion-button>
+
+      <ion-button (click)="guardar()">
+       Guardar
+      </ion-button>
+    </div>
+
+
+
+  <ion-list>
+    <ion-list-header>
+      <ion-label>Empleado</ion-label>
+    </ion-list-header>
+
+    <div *ngFor="let empleado of empleados; let i = index">
+      <ion-item *ngIf="empleado.nivel == nivel">
+        <ion-label>{{i}}.- Empleado: {{empleado.nombre}}
+          <p>Telefono: {{empleado.telefono}}</p>
+          <p>Cargo: {{empleado.cargo}}</p>
+          <p>Nivel: {{empleado.nivel}}</p>
+        </ion-label>
+        <ion-buttons slot="end">
+          <ion-button (click)="editar(empleado)">
+            <ion-icon slot="icon-only" name="create"></ion-icon>
+          </ion-button>
+          <ion-button (click)="eliminar(i)">
+            <ion-icon slot="icon-only"color="danger" name="trash-bin"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-item>
+    </div>
+
+    
+  
+
+  </ion-list>
+
+
+
 
 </ion-content>
