--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -16,4 +16,10 @@
       </ion-item>
   </ion-menu-toggle>
 
+  <ion-menu-toggle>
+    <ion-item (click)="salir()">
+      <ion-label>Salir</ion-label>
+    </ion-item>
+</ion-menu-toggle>
+
 </ion-list>
