--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,7 +10,7 @@
 
     <ion-item>
         <ion-label position="stacked">Correo</ion-label>
-        <ion-input pattern=""  [(ngModel)]="correo"></ion-input>
+        <ion-input type="number" [(ngModel)]="correo"></ion-input>
     </ion-item>
 
     <ion-item>
@@ -31,7 +31,6 @@
         </ion-buttons>
     </ion-item>
 
-    
     
 
 
