--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -27,13 +27,13 @@
 
   <ion-item>
       <ion-label position="stacked">Contraseña</ion-label>
-      <ion-input [(ngModel)]="newUser.password"></ion-input>
+      <ion-input type="password" [(ngModel)]="newUser.password"></ion-input>
   </ion-item>
 
   
   <ion-item>
     <ion-label position="stacked">Repite Contraseña</ion-label>
-    <ion-input [(ngModel)]="repassword"></ion-input>
+    <ion-input type="password" [(ngModel)]="repassword"></ion-input>
 </ion-item>
 
   <ion-button (click)="registrarse()" expand="block"  shape="round">
